--- a/_pages/team.html
+++ b/_pages/team.html
@@ -121,19 +121,6 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Undergraduate Students</h4>
 
 <ul>
-	<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – Present<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
-Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
-Award 2: (2021.09-2022.04) Biotalent SWPP <br>
-Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
-Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
-Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
-Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
- <!--   Honer Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- First job: PhD Student, University of Washington  <br> 
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
-<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
-<li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
 <li><strong>  Houshi He </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
 <li><strong>  Yanjun Guo </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
 
@@ -253,13 +240,25 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 <h4>Long-term Visitors</h4>
 <ul>
-	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
 	<li><strong>  Yao Dong </strong> (Faculty, Hebei University of Technology, China， funded by CSC grant), 2021.12 – 2023.08<br>						
+	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
 
 </ul>
 
 	<h4>Undergraduate Students</h4>
 <ul>
+	<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – 2023.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
+Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
+Award 2: (2021.09-2022.04) Biotalent SWPP <br>
+Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
+Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
+Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
+Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
+ <!--   Honer Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ First job: PhD Student, University of Washington  <br> 
+  </li>
+<li><strong>  Christine Wong Chong (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>
+<li><strong>  Markus Swoveland (UVic) </strong> Full-time internship @ CFIA, 2023.01 – 2023.08<br>   </li>	
 
 	<li><strong>  Aman Monga (UVic) </strong> Full-time internship @ CFIA, 2022.05 – 2022.12<br>   </li>
 	<li><strong>  Xuhui Wang (UVic) </strong> Summer internship, 2022.05 – 2022.08<br>   </li>	
