--- a/_pages/team.html
+++ b/_pages/team.html
@@ -121,8 +121,12 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Undergraduate Students</h4>
 
 <ul>
-<li><strong>  Houshi He </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
-<li><strong>  Yanjun Guo </strong> MITACS Globalink Research Internship, 2023.08 – 2023.10<br>   </li>	
+<li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
+</li>	
+<li><strong>  Yanjun Guo </strong>, 2023.08 – 2023.10<br>  
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
+</li>	
 
 
 	
@@ -159,18 +163,18 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	Firest job: <a href="https://www.amazon.ca/"> Amazon </a>, Vancouver	
 	</li>
 
-		<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2020.09 – 2022.07<br>	
+		<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.07<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
  <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>	
-	<li><strong>  Yichen Yan</strong> 2020.09 – 2022.08<br>	  </li>	
+	<li><strong>  Yichen Yan</strong> 2022.08<br>	  </li>	
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 First job: PhD student, Simon Fraser University </a>, Canada  <br> 
-	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2020.09 – Present<br>	 
+	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2022.08<br>	 
 	Award: (2021.09-2022.08) Biotalent SWPP <br>
 	</li>	
 
