--- a/_pages/team.html
+++ b/_pages/team.html
@@ -170,10 +170,11 @@ Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>	
-	<li><strong>  Yichen Yan</strong> 2022.08<br>	  </li>	
+	<li><strong>  Yichen Yan</strong> 2022.08<br>	  
   Award	1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship<br> <!--,   <font color="blue">$2,500</font> <br> -->
 Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $16,000 </font> <br> -->
 First job: PhD student, Simon Fraser University </a>, Canada  <br> 
+	</li>	
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2022.08<br>	 
 	Award: (2021.09-2022.08) Biotalent SWPP <br>
 	</li>	
