--- a/_pages/team.html
+++ b/_pages/team.html
@@ -153,7 +153,8 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Master Students</h4>
 <ul>
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
-	Award: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize
+	Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
+	Award: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize<br>
 	First job: PhD student, UVic Math & Stat Department			
 	</li>
 
