--- a/_pages/team.html
+++ b/_pages/team.html
@@ -21,7 +21,7 @@ author_profile: true
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
   Award 2: (2022.9-2024.2) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $30,500 </font> <br> -->
- <!-- Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+  Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
 		<!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -31,7 +31,7 @@ author_profile: true
  <!--	Internship:  <br>  -->
 Award 1: (2021.9-2023.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $42,000 </font> <br> -->
 Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <be>
-<!-- Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->		
+Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
 <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
 <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
 <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
@@ -46,9 +46,14 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 </li> 
 	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
+		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
+	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+	Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
+	</li>
+
 	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	 
-	<!-- Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
 	</li>
 	
 	
@@ -76,14 +81,10 @@ Award 2: (2022.10-2023.04) MATICS Accelerate Fellowship at <a href="https://www.
 
 <ul>	
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  
-	<!-- Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->
+	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
 	</li>
 	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
 	Internship: (2023.5-2023.8) VERACYTE </li>
-	<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
-	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
-   <!-- Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> -->		
-	</li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
