--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,6 +10,9 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 
 <!--<h3>Published </h3> -->
 <ol>
+<li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a>
+</li> 
+	
 <li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a>
 </li>
 	
