--- a/_pages/research.html
+++ b/_pages/research.html
@@ -16,7 +16,7 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 <li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a>
 </li>
 	
-<li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/doi/full/10.1080/19466315.2023.2197402 "> Link to Paper </a>
+<li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a>
 </li>
 	
 <li>	<u>Ji X</u>, <u>Tsao D</u>, <u>Bai K</u>, Tsao M, Xing L, and <b>Zhang X</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a> 
