--- a/_pages/team.html
+++ b/_pages/team.html
@@ -45,12 +45,12 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  
 		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 </li> 
-	<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li> 
 		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
 	</li>
-
+	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
+	Internship: (2023.5-2023.12) VERACYTE </li>
 	<li><strong>  Haochen Ning</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Qianyun Zhao</strong>  2023.09 – Present<br>	 
 	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
@@ -58,7 +58,7 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	
 	
 
-	
+ <!--  		<li><strong>  Yupeng Zhao </strong>  2022.06 – Present<br>	  </li>  -->
 
  <!--    <li><strong>Hoi Suen Wong</strong>, 2018.9 – Present<br>  --> 
  <!--    Award 1: (2018.9 - 2020.02) VADA Trainee Scholarship (NSERC CREATE) <font color="blue"> $19,000/year&nbsp; </font> <br>  -->
@@ -83,8 +83,6 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  
 	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
 	</li>
-	<li><strong>  Shiyu Xu</strong>  2022.09 – Present<br>	 
-	Internship: (2023.5-2023.8) VERACYTE </li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
