--- a/_pages/team.html
+++ b/_pages/team.html
@@ -117,19 +117,13 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 
 
-<h4>Undergraduate Students</h4>
+<!-- <h4>Undergraduate Students</h4>  -->
 
-<ul>
-<li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
-Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
-</li>	
-<li><strong>  Yanjun Guo </strong>, 2023.08 – 2023.10<br>  
-Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
-</li>	
-
-
-	
-</ul>
+<!-- <ul>  -->
+<!-- <li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   -->  
+<!-- Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>  -->
+<!-- </li>  -->	
+<!-- </ul>  -->
 	
 <h3><strong>Alumni</strong><br>
 </h3>
@@ -251,6 +245,13 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 </ul>
 
 	<h4>Undergraduate Students</h4>
+<ul>
+<li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
+</li>	
+<li><strong>  Yanjun Guo </strong>, 2023.08 – 2023.10<br>  
+Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
+</li>	
 <ul>
 	<li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – 2023.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
