--- a/_pages/team.html
+++ b/_pages/team.html
@@ -147,7 +147,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <ul>
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
 	Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
-	Award: (2023.05) Best Posters of the CSSC Student Conference Awards - 2nd prize<br>
+	Award: (2023.05) Best Posters Awards of the CSSC Conference - 2nd prize<br>
 	First job: PhD student, UVic Math & Stat Department			
 	</li>
 
@@ -256,7 +256,7 @@ Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
 <li><strong>  Danielle Tsao (UVic) </strong> 2021.05 – 2023.08<br> <!--(Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask) -->
 Award 1: (2021.05-2021.08) NSERC Undergraduate Student Research Awards <br>
 Award 2: (2021.09-2022.04) Biotalent SWPP <br>
-Award 3: (2022.05) Best Posters of the CSSC Student Conference Awards - 1st prize <br>		
+Award 3: (2022.05) Best Posters Awards of the CSSC Conference  - 1st prize <br>		
 Award 4: (2022.05-2022.08) UVic Science Emerging Researcher Award (SERA) <br>	
 Award 5: (2022.08) UVic Jamie Cassels Undergraduate Research Awards <br>	
 Award 6: (2022.10-2023.01) MATICS Accelerate Fellowship <br>
