--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -12,7 +12,7 @@ author_profile: true
 <p>  <a href="https://www.nserc-crsng.gc.ca/professors-professeurs/grants-subs/dgigp-psigp_eng.asp"> NSERC Discovery Grant </a> (2022-2027, <em><u>$105,000</u></em>)  Discovery and investigation of cell type abundance biomarkers using single-cell and bulk genomic data (Role: Principal Investigator) <br>
 <p>  <a href="https://www.genomecanada.ca/en/programs/translation/funding-opportunities/genomic-applications-partnership-program"> CIHR project grant </a> (2020-2025, <em><u>$378,676</u></em>) Developing a Patient-Specific Surgical Decision-Assistance Tool to Improve Reverse
 Shoulder Replacement Outcomes  (Role: one of three Principal Investigators)<br><!-- <p>  <a href="https://www.computecanada.ca/research-portal/accessing-resources/resource-allocation-competitions/"> Compute Canada Resource allocation competition </a> (2019-current)  Development of Novel Statistical Methods and software in Complex Genomics Data (Role: Principal Investigator)<br>	
-<!-- <p>  <a href="https://www.chairs-chaires.gc.ca/home-accueil-eng.aspx#"> Canada Research Chair in Biostatistics and Bioinformatics (Tier 2) </a> (2017-2027, <em><u>$1,080,000</u></em>)  (Role: Principal Investigator) <br>
+<!-- <p>  <a href="https://www.chairs-chaires.gc.ca/home-accueil-eng.aspx#"> Canada Research Chair in Biostatistics and Bioinformatics (Tier 2) </a> (2017-2027, <em><u>$1,080,000</u></em>)  (Role: Principal Investigator) <br> -->
 
   
 <h3><strong>Past Projects (selected)</strong><br>
