--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,13 +10,6 @@ author_profile: true
 <h4>PhD Students</h4>
 <ul>
 	
-	<li><strong>  Shuai You</strong> 2019.09 – Present (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
- <!--	Internship:  <br>  -->
- Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
- <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
- <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
-  </li>
 	<li><strong>  Kailun Bai</strong> 2020.09 – Present	(Co-supervisor Dr. Xiaojian Shao, National Research Council Canada) <br>
 	 <!--	Internship:  <br>  -->
   Award 1: (2020.09) UVic Facuty of Graduate Studies Entrance Scholarship <br> <!--,   <font color="blue">$5,000</font> <br> -->
@@ -125,8 +118,18 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <!-- </li>  -->	
 <!-- </ul>  -->
 	
-<h3><strong>Alumni</strong><br>
-</h3>
+<h3><strong>Alumni</strong><br></h3>
+
+<h4>PhD students</h4>
+	<li><strong>  Shuai You</strong> 2019.09 – 2024.03 (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
+ <!--	Internship:  <br>  -->
+ Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
+ Thesis: <em> Predictive modelling, Anomaly Detection, and Empirical Extraction of Variation Patterns within Longitudinal Data </em> <br> 
+ First job: Postdoc Fellow, <a href="https://www.uwo.ca/index.html"> Western University</a>, Canada  <br> 
+ <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
+  </li>
+
+	
 <h4>Postdoctorate Fellows and Research Associates</h4>
 
 <ul>
@@ -146,11 +149,13 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Master Students</h4>
 <ul>
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
-	Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
+	Thesis: <em> Iimi: A novel automated workflow for plant virus diagnostics from high-throughput sequencing data </em> <br>
 	Award: (2023.05) Best Posters Awards of the CSSC Conference - 2nd prize<br>
 	First job: PhD student, UVic Math & Stat Department			
 	</li>
 
+	<li><strong>  Guojun Ma</strong>  2023.8<br>	  
+	
 	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
         Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
  <!--	Research Assistant: (2021.05 -2021.08) Department of Mathematics and Statistics, UVic <br> -->
@@ -160,7 +165,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 		<li><strong>  Xiangling Ji</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) 2022.07<br>	
 Work Study: (2021.01 - 2021.04) Centre for Biomedical Research, UVic  <br>
  <!--   Award: (2019.9) UVic Entrance Scholarship,   <font color="blue">$5,000</font> <br> -->
- <!--   Thesis: <em>Sequential Convex Approximation Approach For A Class Of Matrix Variable Quadratic Function Minimization Problems With Rank Constraint</em> <br> -->  
+ Thesis: <em>scAnnotate: An Automated Cell Type Annotation Tool for Single-cell RNA-Sequencing Data</em> <br> 
  <!--   First job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
   </li>	
