--- a/_pages/team.html
+++ b/_pages/team.html
@@ -122,7 +122,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>PhD students</h4>
 	<li><strong>  Shuai You</strong> 2019.09 – 2024.03 (Co-supervisor <a href="https://www.uvic.ca/science/math-statistics/people/home/faculty/lesperance_mary.php"> Dr. Mary Lesperance</a>, UVic)<br>
  <!--	Internship:  <br>  -->
- Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> 
+ Award: (2019.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>   <!--,   <font color="blue">$5,000</font> -->
  Thesis: <em> Predictive modelling, Anomaly Detection, and Empirical Extraction of Variation Patterns within Longitudinal Data </em> <br> 
  First job: Postdoc Fellow, <a href="https://www.uwo.ca/index.html"> Western University</a>, Canada  <br> 
  <!--   Current job: Lecturer (equiv. Assistant Pofessor), <a href="http://www.fzu.edu.cn/"> Fuzhou University</a>, China  <br> -->
