--- a/_pages/team.html
+++ b/_pages/team.html
@@ -153,7 +153,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	First job: PhD student, UVic Math & Stat Department			
 	</li>
 
-	<li><strong>  Guojun Ma</strong>  2023.8<br>	  
+	<li><strong>  Guojun Ma</strong>   (Co-supervisor <a href="https://sites.google.com/site/ytchenmathstats/"> Dr. Yu-Ting Chen</a>, UVic) 2023.08	</br>  
 	
 	<li><strong>  Xiaolin Huang</strong> 2022.06<br>
         Thesis: <em> Statistical Research on COVID-19 Response </em> <br>
