--- a/_pages/team.html
+++ b/_pages/team.html
@@ -174,7 +174,8 @@ Award 2: (2021.09-2022.08) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <fo
 First job: PhD student, Simon Fraser University </a>, Canada  <br> 
 	</li>	
 	<li><strong>  Shaoze Zhou</strong> (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic), 2022.08<br>	 
-	Award: (2021.09-2022.08) Biotalent SWPP <br>
+Thesis: <em> Deep Learning Methods May Not Outperform Other Machine Learning Methods on Analyzing Genomic Studies</em> <br>
+		Award: (2021.09-2022.08) Biotalent SWPP <br>
 	</li>	
 
 	<li><strong>  Yang Guo</strong> (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask), 2021.07<br>
