--- a/_pages/team.html
+++ b/_pages/team.html
@@ -109,13 +109,12 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 
 
-<!-- <h4>Undergraduate Students</h4>  -->
-
-<!-- <ul>  -->
-<!-- <li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   -->  
-<!-- Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>  -->
-<!-- </li>  -->	
-<!-- </ul>  -->
+<h4>Undergraduate Students</h4> 
+<ul> 
+<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – 2024.12<br>  Full-time intern </li> 
+<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – 2024.8<br>  Full-time intern </li> 	
+<li><strong>  Andy Chen (University of British Columbia) </strong>, 2024.06 – 2024.8<br> Summer research intern  </li> 		
+</ul>
 	
 <h3><strong>Alumni</strong><br></h3>
 
