--- a/_pages/research.html
+++ b/_pages/research.html
@@ -8,25 +8,14 @@ author_profile: true
 <h2> Recently Published Papers (Selected) </h2>
 Trainnees are underlined, last/corresponding authors denoted by *. Full list of publications can be found on my <a href="https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"> Google Scholar </a> page.
 
-<!--<h3>Published </h3> -->
-<ol>
-<li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a>
-</li> 
+<h3> Statistics, Bioinformatics, and Biomedicine </h3> 
+<ol>	
+<li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a> </li>
 	
-<li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a>
-</li>
+<li>	<u>Ji X</u>, <u>Tsao D</u>, <u>Bai K</u>, Tsao M, Xing L, and <b>Zhang X</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a>  </li>
 	
-<li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a>
-</li>
+
 	
-<li>	<u>Ji X</u>, <u>Tsao D</u>, <u>Bai K</u>, Tsao M, Xing L, and <b>Zhang X</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a> 
-</li>
-	
-<li>	<u>You S</u>, <u>Huang X</u>, Xing L, Lesperance M, LeBlanc C, Moccia P, Mercier V, Shao X, Pan Y*, <b>Zhang X</b>*. 2023,  Dynamics of Fecal Coliform Bacteria along Canada’s Coast. <em>Marine Pollution Bulletin</em> (impact factor 7.001) <a href="https://doi.org/10.1016/j.marpolbul.2023.114712"> Link to Paper </a> 
-</li>
-	
-<li> <b>Zhang X</b>, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 6.793) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link to Paper </a> and <a href="https://github.com/ubcxzhang/Stock-Price-Prediction"> GitHub code </a> 
-</li>	
 
 <li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, <b>Zhang X</b>*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link to Paper </a> 
 </li>	
@@ -38,18 +27,13 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 <li> Xing L, <b>Zhang X</b>, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link to Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
   
 	
-<li> <u>Lu Y</u>, Zhou J, Xing L, <b>Zhang X</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
-<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
-<em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 	
-<li>Xu K, Zheng X, Xing L, <b>Zhang X</b>. Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. 2020， <em>Journal of Financial Research</em> <!--<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543713"> SSRN manuscript </a>  or -->
-	<a href="https://doi.org/10.1111/jfir.12210"> Link to Paper </a> </li>
      
 <li> Xing L, Lesperance ML, <b>Zhang X</b>*. Simultaneous prediction of multiple outcomes using revised stacking algorithms. 2020， <em>Bioinformatics</em> <a href="https://doi.org/10.1093/bioinformatics/btz531"> Link to Paper </a> and 
 <a href="https://cran.r-project.org/web/packages/MTPS/index.html"> Software package </a> </li>
 <!--	and <a href="https://github.com/ubcxzhang/MTPS"> GitHub </a> -->
-<!--<p><em> In many situations, we are interested in prediction of multiple outcomes. Compared with predicting each outcome individually, the prediction performance can be improved by simutanuously predicting all outcomes and allow predictions borrow information among different outcomes. There are many prediction methods developed for single outcome prediction, but most of them have/can not been extended into multi-outcome prediction version. Neural network is the major methods for multitask prediction problems. We proposed an novel algorithm that can construct complex multi-outcome prediction models using almost any single-outcome prediction methods as building blocks. Our novel algorithm is not only flexible, but also powerful. Using cross validation studies on data from HIV database, we show our method outperform multi-outcome neural network and other multi-task prediction methods in the literature.</em></p>
+<!--<p><em> In many situations, we are interested in prediction of multiple outcomes. Compared with predicting each outcome individually, the prediction performance can be improved by simultaneously predicting all outcomes and allowing predictions to borrow information from different outcomes. There are many prediction methods developed for single outcome prediction, but most of them have/can not been extended into multi-outcome prediction version. Neural network is the major methods for multitask prediction problems. We proposed an novel algorithm that can construct complex multi-outcome prediction models using almost any single-outcome prediction methods as building blocks. Our novel algorithm is not only flexible, but also powerful. Using cross validation studies on data from HIV database, we show our method outperform multi-outcome neural network and other multi-task prediction methods in the literature.</em></p>
 -->
 <li> <u>Xu Y</u>, Xing L, Su J, <b>Zhang X</b>*, Qiu W*. Model-based clustering for identifying disease-associated SNPs in case-control genome-wide association studies. 2019， <em>Scientific Reports</em> <a href="https://www.nature.com/articles/s41598-019-50229-6"> Link of Paper</a> and <a href="https://cran.r-project.org/web/packages/GWASbyCluster/index.html">  Software package </a> </li>
 	<!-- and <a href="https://github.com/ubcxzhang/GWASbyCluster"> GitHub</a> -->
@@ -58,12 +42,29 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 
 </ol>	
 
-<!--<h3>Submitted</h3>
-<p>Optimal Study Design for Reducing Variances of Coefficient Estimators in Change-Point Models.  (2020) <a href="https://arxiv.org/abs/2004.13963"> Arxiv manuscript </a> <br>
--->    
+<h3> Environmental Research </h3> 
+<ol>
+<li>	<u>You S</u>, Xing L, Lesperance M, Pan Y*, <b>Zhang X</b>*. Temporal and Spatial Variation Patterns of Domoic Acid along Canada’s Coast. 2024 <em>Science of the Total Environment</em>  (Impact Factor 9.8) <a href="https://doi.org/10.1016/j.scitotenv.2024.172817"> Link to Paper </a>  </li>
+<li>	<u>You S</u>, Xing L, Lesperance M, Pan Y*, <b>Zhang X</b>*. Longitudinal Study of Paralytic Shellfish Toxins along Canada’s Coast. 2024 <em>Environmental Research</em> (Impact Factor 8.3) <a href="https://doi.org/10.1016/j.envres.2024.118944"> Link to Paper </a>  </li>
+<li>	<u>You S</u>, <u>Huang X</u>, Xing L, Lesperance M, LeBlanc C, Moccia P, Mercier V, Shao X, Pan Y*, <b>Zhang X</b>*. 2023,  Dynamics of Fecal Coliform Bacteria along Canada’s Coast. <em>Marine Pollution Bulletin</em> (impact factor 5.8) <a href="https://doi.org/10.1016/j.marpolbul.2023.114712"> Link to Paper </a>  </li>
+</ol>	
+<h3> Design of adaptive clinical trials </h3> 
+<ol>
+<li>	Chen C, Sun L, <b>Zhang X</b>.  A promising biomarker adaptive Phase 2/3 design – explained and expanded. 2023, <em>Contemporary Clinical Trials Communications</em>  <a href="https://doi.org/10.1016/j.conctc.2023.101229"> Link to Paper </a> </li> 
+<li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
+<li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
+<li>    <u>Lu Y</u>, Zhou J, Xing L, <b>Zhang X</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
+<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
+<em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
+	
+</ol>	
 
+<h3> Economics </h3> 
+<ol>
+<li> <b>Zhang X</b>, <u>Huang Y </u>, Xu K, Xing L. Novel Modelling Strategies for High-frequency Stock Trading Data. 2023，<em> Financial Innovation</em> (impact factor 8.4) <a href="https://doi.org/10.1186/s40854-022-00431-9"> Link to Paper </a> and <a href="https://github.com/ubcxzhang/Stock-Price-Prediction"> GitHub code </a>  </li>	
+<li>Xu K, Zheng X, Xing L, <b>Zhang X</b>. Stock Market Openness and Market Quality: Evidence from the Shanghai-Hong Kong Stock Connect Program. 2020， <em>Journal of Financial Research</em>	<a href="https://doi.org/10.1111/jfir.12210"> Link to Paper </a> </li>
+</ol>	
 
-    
 <h2>Software </h2>
 <p> <strong>scAnnotate</strong>: An Automated Cell Type Annotation Tool for Single-Cell RNA-Sequencing Data.   <a href="https://cran.r-project.org/web/packages/scAnnotate/index.html"> CRAN</a> </p>
 <p> <strong>DesignCTPB</strong>: Design Clinical Trials with Potential Biomarker Effect.   <a href="https://cran.r-project.org/web/packages/DesignCTPB/"> CRAN</a> </p>
