--- a/_pages/research.html
+++ b/_pages/research.html
@@ -1,30 +1,21 @@
 ---
 layout: archive
-title: "Publications"
+title: "Publications (Selected) "
 permalink: /research/
 author_profile: true
 ---
 
-<h2> Recently Published Papers (Selected) </h2>
-Trainnees are underlined, last/corresponding authors denoted by *. Full list of publications can be found on my <a href="https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"> Google Scholar </a> page.
+<h2> Recently Published Papers </h2>
+Trainees are underlined, and the last/corresponding authors are denoted by *. A full list of publications can be found on my <a href="https://scholar.google.ca/citations?user=5QsFxcAAAAAJ&hl=en"> Google Scholar </a> page.
 
 <h3> Statistics, Bioinformatics, and Biomedicine </h3> 
 <ol>	
-<li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a> </li>
-	
+<li>	Luo W, Zhu Y, <b>Zhang X</b>, Lin L. A, Semi-parametric Estimation of Personalized Dose-response Function Using Instrumental Variables. 2024, <em>Journal of Machine Learning Research </em>, <a href="https://www.jmlr.org/papers/v25/21-1181.html"> Link to Paper </a> </li>
+<li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a> </li>	
 <li>	<u>Ji X</u>, <u>Tsao D</u>, <u>Bai K</u>, Tsao M, Xing L, and <b>Zhang X</b>*. scAnnotate: an automated cell type annotation tool for single-cell RNA-sequencing data. 2023, <em>Bioinformatics Advance</em>,  <a href="https://doi.org/10.1093/bioadv/vbad030"> Link to Paper </a> and <a href="https://cran.r-project.org/package=scAnnotate"> R package </a>  </li>
-	
-
-	
-
-<li> <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, <b>Zhang X</b>*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link to Paper </a> 
-</li>	
-	
-<li> <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, <b>Zhang X</b>*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 17.033) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link to Paper </a> 
-</li>
-
-	
-<li> Xing L, <b>Zhang X</b>, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link to Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
+<li>   <u>Guo Y </u>, Esfahani F, Shao X, Srinivasan V, Thomo A, Xing L, <b>Zhang X</b>*. Integrative COVID-19 Biological Network Inference with Probabilistic Core Decomposition. 2021，<em> Briefings in Bioinformatics</em> (impact factor 13.994) <a href="http://track.smtpsendmail.com/9032119/c?p=dURESqMbVp7SYyXWYP_rJD8i4ORrND9MaXC870moZQF77VBu4oAd_78x_borV95YAdwD92-lIeDhQwIHq1DGaTsvuUF2lli7FfHsGMFMs2-RCRr7439q7HTVUxr22EVbk3x7a8TG7EWHTZWfd6bww3urY2wB44ugbdN38WA4Dol7SoV0Euu2HCY5Qw_Q4ob0lAoWRwAuRHhQZWX64QjN20tA6vFFm9V0q6CvEG-T-we6nLj7KtKqfMGiUiYPz8q6S-GsTlZ6O-C7S1nuJHxoaw=="> Link to Paper </a>  </li>		
+<li>   <u>Huang X </u>, Shao X, Xing L, <u>Hu Y</u>, Sin DD*, <b>Zhang X</b>*. The impact of lockdown timing on COVID-19 transmission across US counties. 2021， <em> EClinicalMedicine</em> (a journal published by the Lancet, impact factor 17.033) <a href="https://www.thelancet.com/journals/eclinm/article/PIIS2589-5370(21)00315-1/fulltext"> Link to Paper </a>  </li>
+<li>   Xing L, <b>Zhang X</b>, Burstyn I， Gustafson P. On logistic Box–Cox regression for flexibly estimating the shape and strength of exposure‐disease relationships. 2021，<em>Canadian Journal of Statistics</em>  <a href="https://onlinelibrary.wiley.com/doi/10.1002/cjs.11587"> Link to Paper </a>,  （<a href="https://ssc.ca/en/awards?field_award_year_value%5Bvalue%5D%5Byear%5D=&tid=1320"> <strong> Statistics Society of Canada 2022 CJS Award </strong> </a> ）</li>
   
 	
 	
@@ -48,6 +39,8 @@ Trainnees are underlined, last/corresponding authors denoted by *. Full list of 
 <li>	<u>You S</u>, Xing L, Lesperance M, Pan Y*, <b>Zhang X</b>*. Longitudinal Study of Paralytic Shellfish Toxins along Canada’s Coast. 2024 <em>Environmental Research</em> (Impact Factor 8.3) <a href="https://doi.org/10.1016/j.envres.2024.118944"> Link to Paper </a>  </li>
 <li>	<u>You S</u>, <u>Huang X</u>, Xing L, Lesperance M, LeBlanc C, Moccia P, Mercier V, Shao X, Pan Y*, <b>Zhang X</b>*. 2023,  Dynamics of Fecal Coliform Bacteria along Canada’s Coast. <em>Marine Pollution Bulletin</em> (impact factor 5.8) <a href="https://doi.org/10.1016/j.marpolbul.2023.114712"> Link to Paper </a>  </li>
 </ol>	
+
+
 <h3> Design of adaptive clinical trials </h3> 
 <ol>
 <li>	Chen C, Sun L, <b>Zhang X</b>.  A promising biomarker adaptive Phase 2/3 design – explained and expanded. 2023, <em>Contemporary Clinical Trials Communications</em>  <a href="https://doi.org/10.1016/j.conctc.2023.101229"> Link to Paper </a> </li> 
