--- a/_pages/research.html
+++ b/_pages/research.html
@@ -25,7 +25,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 -->
 <li> <u>Xu Y</u>, Xing L, Su J, <b>Zhang X</b>*, Qiu W*. Model-based clustering for identifying disease-associated SNPs in case-control genome-wide association studies. 2019， <em>Scientific Reports</em> <a href="https://www.nature.com/articles/s41598-019-50229-6"> Link of Paper</a> and <a href="https://cran.r-project.org/web/packages/GWASbyCluster/index.html">  Software package </a> </li>
 	<!-- and <a href="https://github.com/ubcxzhang/GWASbyCluster"> GitHub</a> -->
-<!-- <p><em>Lack of power is a issue problem for many GWAS studies, if the multiple testing problem is addressed using standard FDR control approach. Increasing sample size is not practical in most situations, hence analysis method with better power is desired. Using simulation studies, we found the real FDR of data analysis is always smaller than nominated FDR. This is due to the failure of incorporating strong LDs (high correlations) among SNPs. We proposed a novel method using Bayesian hierarchical models (model based clustering), which joint model all SNPs to better control FDR and improve power of the analysis of GWAS.</em></p>
+<!-- <p><em>Lack of power is an issue problem for many GWAS studies if the multiple testing problem is addressed using a standard FDR control approach. Increasing sample size is not practical in most situations, hence analysis method with better power is desired. Using simulation studies, we found the real FDR of data analysis is always smaller than nominated FDR. This is due to the failure of incorporating strong LDs (high correlations) among SNPs. We proposed a novel method using Bayesian hierarchical models (model based clustering), which joint model all SNPs to better control FDR and improve power of the analysis of GWAS.</em></p>
 -->
 
 </ol>	
@@ -44,8 +44,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 <li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
 <li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
 <li>    <u>Lu Y</u>, Zhou J, Xing L, <b>Zhang X</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
-<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a> <br>
-<em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
+<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a>  <em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
 	
 </ol>	
 
