--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 
 <h3> Statistics, Bioinformatics, and Biomedicine </h3> 
 <ol>	
-<Li>    Bie Y, <u>You S</u>u>, Li X, <b>Zhang X</b>* and Lu T, Essential Number of Principal Components and Nearly Training-Free Model for Spectral Analysis. 2024, <em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em>, (Impact factor 20.8) <a href="https://doi.org/10.1109/TPAMI.2024.3436860"> Link to Paper </a> </li>
+<Li>    Bie Y, <u>You S</u>, Li X, <b>Zhang X</b>* and Lu T, Essential Number of Principal Components and Nearly Training-Free Model for Spectral Analysis. 2024, <em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em>, (Impact factor 20.8) <a href="https://doi.org/10.1109/TPAMI.2024.3436860"> Link to Paper </a> </li>
 <Li>    <u>Ning H</u>, Boyes I, Numanagić I, Rott M*, Xing L*, <b>Zhang X</b>*. Diagnostics of viral infections using high-throughput genome sequencing data. 2024, <em>Briefings in Bioinformatics</em> (Accepted)
 <li>	Luo W, Zhu Y, <b>Zhang X</b>, Lin L. A, Semi-parametric Estimation of Personalized Dose-response Function Using Instrumental Variables. 2024, <em>Journal of Machine Learning Research </em>, <a href="https://www.jmlr.org/papers/v25/21-1181.html"> Link to Paper </a> </li>
 <li>	<b>Zhang X</b>, <u>Huang X</u>, and Xing L. ADSP: An Adaptive Sample Pooling Strategy for Diagnostic Testing. 2023, <em>Journal of Biomedical Informatics</em>,  <a href="https://www.sciencedirect.com/science/article/pii/S1532046423002228"> Link to Paper </a>   </li>	
