--- a/_pages/team.html
+++ b/_pages/team.html
@@ -73,13 +73,7 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 <h4>Master Students</h4>
 
 <ul>	
-	<li><strong>  Wanmeng Wang</strong>  2022.09 – Present<br>	  
-	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
-	</li>
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
-	<li><strong>  Yingjie Hou</strong>  2023.07 – Present<br>	
-	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
-	</li>
 	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 </ul>
@@ -146,10 +140,19 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Yingjie Hou</strong>  2023.07 – 2024.12<br>	
+	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+	First job: BC Pension Fund & Public Sector Investing
+	</li>
+
+	<li><strong>  Wanmeng Wang</strong>  2022.09 – 2024.08<br>	  
+	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
+	</li>
+	
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
 	Thesis: <em> Iimi: A novel automated workflow for plant virus diagnostics from high-throughput sequencing data </em> <br>
 	Award: (2023.05) Best Posters Awards of the CSSC Conference - 2nd prize<br>
-	First job: PhD student, UVic Math & Stat Department			
+			
 	</li>
 
 	<li><strong>  Guojun Ma</strong>   (Co-supervisor <a href="https://sites.google.com/site/ytchenmathstats/"> Dr. Yu-Ting Chen</a>, UVic) 2023.08	</br>  
