--- a/_pages/team.html
+++ b/_pages/team.html
@@ -73,6 +73,12 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 <h4>Master Students</h4>
 
 <ul>	
+	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	 
+	Award 1: (2024.10-2025.03) BioTalent Science Horizons Youth Intership Program <br>
+	</li>
+	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	
+	Award 1: (2024.09) UVic Facuty of Graduate Studies Entrance Scholarship <br>
+	</li>	
 	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
@@ -105,9 +111,8 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 
 <h4>Undergraduate Students</h4> 
 <ul> 
-<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – 2024.12<br>  Full-time intern </li> 
-<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – 2024.8<br>  Full-time intern </li> 	
-<li><strong>  Andy Chen (University of British Columbia) </strong>, 2024.06 – 2024.8<br> Summer research intern  </li> 		
+<li><strong>  Bryce Davidson (UVic) </strong>, 2024.05 – current <br>  Full-time intern </li> 
+<li><strong>  Jason Thomo (UVic) </strong>, 2024.05 – current <br>  Research Assistant </li> 	
 </ul>
 	
 <h3><strong>Alumni</strong><br></h3>
@@ -254,6 +259,8 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 	<h4>Undergraduate Students</h4>
 <ul>
+<li><strong>  Andy Chen (University of British Columbia) </strong>, 2024.06 – 2024.8<br> Summer research intern  </li> 		
+
 <li><strong>  Houshi He </strong>, 2023.08 – 2023.10<br>   
 Award: (2023.08-2021.10) MITACS Globalink Research Internship <br>
 </li>	
