--- a/_pages/research.html
+++ b/_pages/research.html
@@ -34,8 +34,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 
 <h3> Environmental Research </h3> 
 <ol>
-Zhaoze Liu, Shuai You, Li Xing, Guillaume Durand, L Paul Moccia, Vincent Mercier, Youlian Pan*, Xuekui Zhang*. OPMS - a web-based ocean pollution monitoring system, Marine Pollution Bulletin, 2025, Vol 212, 117510, DOI 10.1016/j.marpolbul.2024.117510 
-<li>	<u>Liu Z</u>, <u>You S</u>, Xing L, Durand G, Moccia P, Mercier V, Pan Y*, <b>Zhang X</b>*. OPMS - a web-based ocean pollution monitoring system, Marine Pollution Bulletin. 2025 <em>Marine Pollution Bulletin</em> (impact factor 5.8) <a href="https://doi.org/10.1016/j.scitotenv.2024.172817"> Link to Paper </a>  </li>
+<li>	<u>Liu Z</u>, <u>You S</u>, Xing L, Durand G, Moccia P, Mercier V, Pan Y*, <b>Zhang X</b>*. OPMS - a web-based ocean pollution monitoring system, Marine Pollution Bulletin. 2025 <em>Marine Pollution Bulletin</em> (impact factor 5.8) <a href="https://doi.org/10.1016/j.marpolbul.2024.117510"> Link to Paper </a>  </li>
 <li>	<u>You S</u>, Xing L, Lesperance M, Pan Y*, <b>Zhang X</b>*. Temporal and Spatial Variation Patterns of Domoic Acid along Canada’s Coast. 2024 <em>Science of the Total Environment</em>  (Impact Factor 9.8) <a href="https://doi.org/10.1016/j.scitotenv.2024.172817"> Link to Paper </a>  </li>
 <li>	<u>You S</u>, Xing L, Lesperance M, Pan Y*, <b>Zhang X</b>*. Longitudinal Study of Paralytic Shellfish Toxins along Canada’s Coast. 2024 <em>Environmental Research</em> (Impact Factor 8.3) <a href="https://doi.org/10.1016/j.envres.2024.118944"> Link to Paper </a>  </li>
 <li>	<u>You S</u>, <u>Huang X</u>, Xing L, Lesperance M, LeBlanc C, Moccia P, Mercier V, Shao X, Pan Y*, <b>Zhang X</b>*. 2023,  Dynamics of Fecal Coliform Bacteria along Canada’s Coast. <em>Marine Pollution Bulletin</em> (impact factor 5.8) <a href="https://doi.org/10.1016/j.marpolbul.2023.114712"> Link to Paper </a>  </li>
