--- a/_pages/research.html
+++ b/_pages/research.html
@@ -47,7 +47,7 @@ Trainees are underlined, and the last/corresponding authors are denoted by *. Th
 <li>	Chen C and <b>Zhang X</b>. From bench to bedside, 2-in-1 design expedites phase 2/3 oncology drug development. 2023, <em>Frontiers in Oncology</em>,  <a href="https://doi.org/10.3389/fonc.2023.1251672"> Link to Paper </a> </li> 
 <li>	<b>Zhang X</b>, <u>Jia H</u>, Xing L, and Chen C. Application of group sequential methods to the 2-in-1 design and its extensions for interim monitoring. 2023, <em>Statistics in Biopharmaceutical Research</em>,  <a href="https://www.tandfonline.com/eprint/MBTZAZGJUFAHDMW3M7RV/full?target=10.1080/19466315.2023.2197402"> Link to Paper </a> </li>
 <li>    <u>Lu Y</u>, Zhou J, Xing L, <b>Zhang X</b>*. The Optimal Design of Clinical Trials with Potential Biomarker Effects, A Novel Computational Approach. 2021， <em> Statistics in Medicine</em>  <a href="https://doi.org/10.1002/sim.8868"> Link to Paper </a> and 
-<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a>  <em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em> </li>
+<a href="https://cran.r-project.org/web/packages/DesignCTPB/index.html"> Software package </a>   </li>  <!-- <em>(<small> The first author is an intern undergraduate student in my lab, who lead programming and 1st draft preparation of this project.</small>)</em>  -->
 	
 </ol>	
 
