--- a/_pages/team.html
+++ b/_pages/team.html
@@ -104,7 +104,6 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <h4>Long-term Visitors</h4>
 <ul>
 	<li><strong>  <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Li Xing</a> </strong> (Assistant Professor, University of Saskatchewan, Canada), 2021.01 – Present<br>	
-	<li><strong>  Qianli Ma </strong> (Associate Professor, Shanxi University, China), 2023.09 – Present <br>	
 	<li><strong>  Lina Li </strong> (PhD student, University of Saskatchewan, Canada), 2023.08 – Present<br>	
 </ul>
 
@@ -252,6 +251,7 @@ Current job: <a href="https://www.amazon.ca/"> Amazon </a> , Vancouver
 
 <h4>Long-term Visitors</h4>
 <ul>
+	<li><strong>  Qianli Ma </strong> (Associate Professor, Shanxi University, China), 2023.09 – 2024.08 <br>	
 	<li><strong>  Xiaowen Cao</strong> (PhD student, Hebei University of Technology, China, funded by CSC fellowship), 2020.02 – 2024.04<be>	
 	<li><strong>  Yao Dong </strong> (Faculty, Hebei University of Technology, China， funded by CSC grant), 2021.12 – 2023.08<br>						
 	<li><strong>  Elham Majd</strong> (Lecturer, Islamic Azad University, Iran), 2020.10 – 2022.05<br>	
