--- a/_pages/team.html
+++ b/_pages/team.html
@@ -35,10 +35,10 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 	<li><strong>  Zhaoze Liu</strong>  2021.09 – Present<br>	
 	  Award 1: (2023.9-2024.8) VADA Trainee Scholarship (NSERC CREATE) <br> <!-- <font color="blue"> $11,500 </font> <br> -->
 </li>
-	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	  
-		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
-</li> 
-		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	 
+<!-- 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	 --> 
+<!--		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
+<!-- </li> -->
+		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  -->
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
 	</li>
@@ -147,11 +147,12 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 <ul>
 	<li><strong>  Yingjie Hou</strong>  2023.07 – 2024.12<br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
-	First job: BC Pension Fund & Public Sector Investing
+	First job: BC Pension Fund & Public Sector Investing (BCI)
 	</li>
 
 	<li><strong>  Wanmeng Wang</strong>  2022.09 – 2024.08<br>	  
 	Award 1: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 
+	First job: Canadian Imperial Bank of Commerce（CIBC）	
 	</li>
 	
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
