--- a/_pages/team.html
+++ b/_pages/team.html
@@ -38,7 +38,7 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 <!-- 	<li><strong>  Jinglan Qiu </strong>   2022.05 – Present (Co-supervisor <a href="https://artsandscience.usask.ca/profile/LXing#/profile"> Dr. Li Xing</a>, USask)  <br>	 --> 
 <!--		  Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 <!-- </li> -->
-		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  -->
+		<li><strong>  Longwen Shang</strong> 2022.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	Award 2: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hli.ubc.ca/"> Centre for Heart Lung Innovation</a>, Vancouver <br> 		
 	</li>
@@ -158,7 +158,7 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	<li><strong>  Haochen Ning</strong>  2023.8<br>	  
 	Thesis: <em> Iimi: A novel automated workflow for plant virus diagnostics from high-throughput sequencing data </em> <br>
 	Award: (2023.05) Best Posters Awards of the CSSC Conference - 2nd prize<br>
-			
+	First job: PhD Student, UVic Zhang Lab			
 	</li>
 
 	<li><strong>  Guojun Ma</strong>   (Co-supervisor <a href="https://sites.google.com/site/ytchenmathstats/"> Dr. Yu-Ting Chen</a>, UVic) 2023.08	</br>  
