--- a/_pages/team.html
+++ b/_pages/team.html
@@ -73,7 +73,6 @@ Award 3: (2024.3-2024.8) MATICS Accelerate Fellowship at <a href="https://www.hl
 <h4>Master Students</h4>
 
 <ul>	
-	<li><strong>  Shuyi Long</strong>  2022.09 – Present<br>	  </li>
 	<li><strong>  Jing Zhang </strong> 2023.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	  </li>
 	<li><strong>  Soojeong Kim</strong>  2023.09 – Present<br>	  </li>	
 	<li><strong>  Patrick Dann </strong> 2024.09 – Present (Co-supervisor <a href="https://www.math.uvic.ca/~mtsao/"> Dr. Min Tsao</a>, UVic) <br>	  	 
@@ -145,6 +144,10 @@ First job:&nbsp;Assistant Professor,  <a href="https://yu.edu.sa/faculty/dr-omar
 	
 <h4>Master Students</h4>
 <ul>
+	<li><strong>  Shuyi Long</strong>  2022.09 – 2025.06<br>	  
+	First job: Founder / Entrepreneur (Self-Employed Business Owner)
+	</li>
+
 	<li><strong>  Yingjie Hou</strong>  2023.07 – 2024.12<br>	
 	Award 1: (2023.7-2023.10) EcoCanada EFTD Program  <br> <!-- <font color="blue"> $20,000 </font> <br> -->
 	First job: BC Pension Fund & Public Sector Investing (BCI)
